Fix upper display overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+h1 {
+    text-align: center;
+}
+
 #container,
 #buttonContainer {
     display: flex;
@@ -11,11 +15,13 @@
 
 #container {
     box-shadow: 2px 2px 10px 1px black;
+    height: 220px;
     width: 215px;
     margin: auto;
     padding-bottom: 10px;
     border-radius: 5px;
     background-color: rgba(240, 248, 255, 0.466);
+    justify-content: end;
 }
 
 #displayContainer {
@@ -24,23 +30,31 @@
     border: 1px solid black;
     border-radius: 3px;
     width: 190px;
-    height: 45px;
+    height: 50px;
     margin-bottom: 4px;
-    padding: 0 3px;
+    padding: 0px 3px;
     background-color: white;
+}
+
+p {
+    display: flex;
+    justify-content: end;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #displayUpper,
 #displayLower {
-    text-align: end;
     margin: 3px 0 3px 0;
     height: 16px;
     flex-shrink: 0;
-    justify-content: end;
 }
 
 #displayUpper {
     font-size: 75%;
+    text-overflow: 'Err';
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 button {
@@ -56,14 +70,15 @@ button:active {
     transform: scale(0.99);
 }
 
+.numberBtn,
+#dec {
+    background-color: rgb(255, 255, 255);
+}
+
 #zero {
     width: 94px;
 }
 
 #equals {
-    background-color: rgba(83, 186, 255, 0.589);
-}
-
-.opperator {
-    background-color: rgba(253, 148, 87, 0.808);
+    background-color: rgb(178, 224, 255);
 }
